fix(styles): use math.div instead of `/`
fixes #13694
closes #13704

BREAKING CHANGE: requires sass@1.33.0

--- a/packages/vuetify/src/components/VAlert/VAlert.sass
+++ b/packages/vuetify/src/components/VAlert/VAlert.sass
@@ -1,4 +1,5 @@
 // Imports
+@use 'sass:math'
 @import './_variables.scss'
 
 // Theme
@@ -138,8 +139,8 @@
         margin-right: $alert-border-icon-margin
 
 .v-alert--dense
-  padding-top: $alert-padding / 2
-  padding-bottom: $alert-padding / 2
+  padding-top: math.div($alert-padding, 2)
+  padding-bottom: math.div($alert-padding, 2)
 
   .v-alert__border
     border-width: $alert-dense-border-width
