--- a/packages/vuetify/src/components/VSlider/VSlider.sass
+++ b/packages/vuetify/src/components/VSlider/VSlider.sass
@@ -1,4 +1,5 @@
 // Imports
+@use 'sass:math'
 @import './_variables.scss'
 
 // Theme
@@ -47,7 +48,7 @@
   position: absolute
   width: $slider-thumb-size
   height: $slider-thumb-size
-  left: -#{$slider-thumb-size / 2}
+  left: math.div(-$slider-thumb-size, 2)
   top: 50%
   border-radius: $slider-thumb-border-radius
   transition: $slider-transition
@@ -64,8 +65,8 @@
     background: currentColor
     opacity: $slider-thumb-before-opacity
     position: absolute
-    left: -#{$slider-thumb-focused-size-increase / 2}
-    top: -#{$slider-thumb-focused-size-increase / 2}
+    left: math.div(-$slider-thumb-focused-size-increase, 2)
+    top: math.div(-$slider-thumb-focused-size-increase, 2)
     transform: scale(0.1)
     pointer-events: none
 
@@ -240,9 +241,9 @@
   pointer-events: none
 
   .v-slider__thumb
-    width: #{$slider-thumb-size - 4}
-    height: #{$slider-thumb-size - 4}
-    left: -#{($slider-thumb-size - 4) / 2}
+    width: $slider-thumb-size - 4
+    height: $slider-thumb-size - 4
+    left: math.div(4 - $slider-thumb-size, 2)
 
     &:before
       display: none
