--- a/packages/vuetify/src/components/VSwitch/VSwitch.sass
+++ b/packages/vuetify/src/components/VSwitch/VSwitch.sass
@@ -112,7 +112,7 @@
       height: $switch-track-inset-height
       left: -4px
       opacity: $switch-track-inset-opacity
-      top: calc(50% - #{$switch-track-inset-height / 2})
+      top: calc(50% - #{$switch-track-inset-height} / 2)
 
     .v-input--selection-controls__ripple,
     .v-input--switch__thumb
