revert: fix(styles): use math.div instead of `/`
This reverts commit 52c98d5706884704c33ef1d9f23c328fa9fdb061.

fixes #13737

--- a/packages/vuetify/src/components/VAlert/VAlert.sass
+++ b/packages/vuetify/src/components/VAlert/VAlert.sass
@@ -1,5 +1,4 @@
 // Imports
-@use 'sass:math'
 @import './_variables.scss'
 
 // Theme
@@ -139,8 +138,8 @@
         margin-right: $alert-border-icon-margin
 
 .v-alert--dense
-  padding-top: math.div($alert-padding, 2)
-  padding-bottom: math.div($alert-padding, 2)
+  padding-top: $alert-padding / 2
+  padding-bottom: $alert-padding / 2
 
   .v-alert__border
     border-width: $alert-dense-border-width
