--- a/packages/vuetify/src/components/VChip/VChip.sass
+++ b/packages/vuetify/src/components/VChip/VChip.sass
@@ -1,5 +1,4 @@
 // Imports
-@use 'sass:math'
 @import './_variables.scss'
 
 // Theme
@@ -200,7 +199,7 @@
 .v-chip
   @each $name, $size in $icon-sizes
     &.v-size--#{$name}
-      border-radius: #{math.div(map-get($size, 'height'), 2)}px
+      border-radius: #{map-get($size, 'height') / 2}px
       font-size: #{map-get($size, 'font-size')}px
       height: #{map-get($size, 'height')}px
 
