--- a/packages/vuetify/src/components/VGrid/_grid.sass
+++ b/packages/vuetify/src/components/VGrid/_grid.sass
@@ -1,4 +1,3 @@
-@use 'sass:math'
 @import '../../styles/styles.sass'
 
 .container
@@ -28,20 +27,20 @@
       &-#{$size}
         .layout
           .flex
-            padding: math.div($gutter, 2)
+            padding: $gutter / 2
 
         .layout:only-child
-          margin: math.div(-$gutter, 2)
+          margin: -$gutter / 2
 
         .layout:not(:only-child)
-          margin: auto math.div(-$gutter, 2)
+          margin: auto (-$gutter / 2)
 
         *:not(:only-child)
           .layout:first-child
-            margin-top: math.div(-$gutter, 2)
+            margin-top: -$gutter / 2
 
           .layout:last-child
-            margin-bottom: math.div(-$gutter, 2)
+            margin-bottom: -$gutter / 2
 
 .layout
   display: flex
@@ -74,9 +73,9 @@
     $n: $grid-columns
     @while $n > 0
       .flex.#{$size}#{$n}
-        flex-basis: math.div($n, $grid-columns) * 100%
+        flex-basis: $n / $grid-columns * 100%
         flex-grow: 0
-        max-width: math.div($n, $grid-columns) * 100%
+        max-width: $n / $grid-columns * 100%
 
       .flex.order-#{$size}#{$n}
         order: $n
@@ -88,9 +87,9 @@
       .flex.offset-#{$size}#{$m}
         // Offsets can only ever work in row layouts
         +ltr()
-          margin-left: math.div($m, $grid-columns) * 100%
+          margin-left: $m / $grid-columns * 100%
         +rtl()
-          margin-right: math.div($m, $grid-columns) * 100%
+          margin-right: $m / $grid-columns * 100%
 
       $m: $m - 1
 
