--- a/packages/vuetify/src/components/VProgressLinear/VProgressLinear.sass
+++ b/packages/vuetify/src/components/VProgressLinear/VProgressLinear.sass
@@ -110,7 +110,7 @@
   opacity: $progress-linear-stream-opacity
   pointer-events: none
   position: absolute
-  top: calc(50% - #{$progress-linear-stream-border-width} / 2)
+  top: calc(50% - #{$progress-linear-stream-border-width / 2})
   transition: inherit
 
 .v-progress-linear--reverse
