--- a/packages/vuetify/src/components/VTimeline/VTimeline.sass
+++ b/packages/vuetify/src/components/VTimeline/VTimeline.sass
@@ -1,5 +1,4 @@
 // Imports
-@use 'sass:math'
 @import './_variables.scss'
 @import './_mixins.sass'
 
@@ -66,7 +65,7 @@
 .v-timeline-item__opposite
   flex: 1 1 auto
   align-self: center
-  max-width: calc(#{$timeline-divider-center} - #{$timeline-divider-width} / 2)
+  max-width: calc(#{$timeline-divider-center} - #{$timeline-divider-width / 2})
 
 // Before/after directions
 .v-timeline:not(.v-timeline--dense):not(.v-timeline--reverse)
@@ -75,13 +74,13 @@
       +timeline-item-align(left)
       +timeline-wedge-align(left)
       .v-timeline-item__body
-        max-width: calc(#{100% - $timeline-divider-center} - #{$timeline-divider-width} / 2)
+        max-width: calc(#{100% - $timeline-divider-center} - #{$timeline-divider-width / 2})
 
     &:nth-child(even):not(.v-timeline-item--after), &--before
       +timeline-item-align(right)
       +timeline-wedge-align(right)
       .v-timeline-item__body
-        max-width: calc(#{$timeline-divider-center} - #{$timeline-divider-width} / 2)
+        max-width: calc(#{$timeline-divider-center} - #{$timeline-divider-width / 2})
 
 // Wedge
 .v-timeline-item__body
@@ -124,19 +123,19 @@
       +timeline-item-align(right)
       +timeline-wedge-align(right)
       .v-timeline-item__body
-        max-width: calc(#{100% - $timeline-divider-center} - #{$timeline-divider-width} / 2)
+        max-width: calc(#{100% - $timeline-divider-center} - #{$timeline-divider-width / 2})
 
     &:nth-child(even):not(.v-timeline-item--before), &--after
       +timeline-item-align(left)
       +timeline-wedge-align(left)
       .v-timeline-item__body
-        max-width: calc(#{$timeline-divider-center} - #{$timeline-divider-width} / 2)
+        max-width: calc(#{$timeline-divider-center} - #{$timeline-divider-width / 2})
 
 .v-timeline--reverse.v-timeline--dense
-  +timeline-line-align(math.div($timeline-divider-width, 2), right, left)
+  +timeline-line-align($timeline-divider-width / 2, right, left)
 
 .v-timeline--dense:not(.v-timeline--reverse)
-  +timeline-line-align(math.div($timeline-divider-width, 2), left, right)
+  +timeline-line-align($timeline-divider-width / 2, left, right)
 
 .v-timeline--dense
   .v-timeline-item
