--- a/packages/vuetify/src/components/VGrid/VGrid.sass
+++ b/packages/vuetify/src/components/VGrid/VGrid.sass
@@ -1,4 +1,3 @@
-@use 'sass:math'
 @import '../../styles/styles.sass'
 @import './_mixins'
 
@@ -16,17 +15,17 @@
   +make-row
 
   & + .row
-    margin-top: math.div($grid-gutter, 2)
+    margin-top: $grid-gutter / 2
 
     &--dense
-      margin-top: math.div($form-grid-gutter, 2)
+      margin-top: $form-grid-gutter / 2
 
   &--dense
-    margin: math.div(-$form-grid-gutter, 2)
+    margin: -$form-grid-gutter / 2
 
     > .col,
     > [class*="col-"]
-      padding: math.div($form-grid-gutter, 2)
+      padding: $form-grid-gutter / 2
 
   // Remove the negative margin from default .row, then the horizontal padding
   // from all immediate children columns (to prevent runaway style inheritance).
