--- a/packages/vuetify/src/components/VAvatar/_mixins.scss
+++ b/packages/vuetify/src/components/VAvatar/_mixins.scss
@@ -7,3 +7,20 @@
     }
   }
 }
+
+@mixin avatar-density ($properties, $densities) {
+  @each $density, $multiplier in $densities {
+    $value: calc(var(--v-avatar-height) + #{$multiplier * $spacer});
+
+    &.v-avatar--density-#{$density} {
+      @if type-of($properties) == "list" {
+        @each $property in $properties {
+          #{$property}: $value;
+        }
+      }
+      @else {
+        #{$properties}: $value;
+      }
+    }
+  }
+}
