--- a/packages/vuetify/src/components/VList/VList.sass
+++ b/packages/vuetify/src/components/VList/VList.sass
@@ -1,98 +1,95 @@
-@import './_variables.scss'
-@import './_mixins.sass'
+// Imports
+@import './index'
 
-// Theme
 .v-list
-  &.primary,
-  &.secondary,
-  &.accent,
-  &.success,
-  &.error,
-  &.warning,
-  &.info
-    > .v-list-item
-      color: map-deep-get($material-dark, 'text', 'primary')
-
-+theme(v-list) using ($material)
-  background: map-get($material, 'cards')
-  color: map-deep-get($material, 'text','primary')
-
-  .v-list--disabled
-    color: map-deep-get($material, 'text', 'disabled')
-
-  .v-list-group--active:before,
-  .v-list-group--active:after
-    background: map-get($material, 'dividers')
-
-// Sheet
-+sheet(v-list, $list-elevation, $list-border-radius, $list-shaped-border-radius)
-
-// Block
-.v-list
-  display: block
+  background: $list-background
+  color: $list-color
+  overflow: auto
   padding: $list-padding
-  position: static
-  +elevationTransition()
+  position: relative
 
-// Modifier
-.v-list--disabled
+  @include border($list-border...)
+  @include elevation($list-elevation)
+  @include position($list-positions)
+  @include rounded($list-border-radius)
+
+  &--border
+    border-width: $list-border-thin-width
+
+  &--disabled
+    pointer-events: none
+    user-select: none
+
+    > [class*='v-list-']
+      opacity: $list-disabled-opacity
+
+  &--subheader
+    padding-top: $list-subheader-padding-top
+
+.v-list-img
+  border-radius: inherit
+  display: flex
+  height: 100%
+  left: 0
+  overflow: hidden
+  position: absolute
+  top: 0
+  width: 100%
+  z-index: -1
+
+.v-list-subheader
+  $root: &
+
+  align-items: center
+  background: inherit
+  display: flex
+  font-size: $list-subheader-font-size
+  font-weight: $list-subheader-font-weight
+  line-height: $list-subheader-line-height
+  padding-inline-end: $list-subheader-padding-end
+  padding-inline-start: $list-subheader-padding-start
+  min-height: $list-subheader-min-height
+  transition: $list-subheader-transition
+
+  &__text
+    opacity: $list-subheader-text-opacity
+    overflow: hidden
+    text-overflow: ellipsis
+    white-space: nowrap
+
+  @at-root
+    @include density('v-list', $list-density) using ($modifier)
+      #{$root}
+        min-height: $list-subheader-min-height + ($modifier * $list-subheader-min-height-multiplier)
+
+  &--inset
+    padding-inline-start: $list-subheader-inset-padding-start
+
+  .v-list--nav &
+    font-size: $list-nav-subheader-font-size
+
+  .v-list--subheader-sticky &
+    background: inherit
+    left: 0
+    position: sticky
+    top: 0
+    z-index: 1
+
+.v-list__overlay
+  background-color: currentColor
+  border-radius: inherit
+  bottom: 0
+  left: 0
+  opacity: 0
   pointer-events: none
+  position: absolute
+  right: 0
+  top: 0
+  transition: opacity 0.2s ease-in-out
 
-.v-list--flat
-  .v-list-item:before
-    display: none
+// VNavigationDrawer
 
-.v-list--dense
-  .v-subheader
-    font-size: $list-dense-subheader-font-size
-    height: $list-dense-subheader-height
-    padding: $list-dense-subheader-padding
-
-.v-list--nav,
-.v-list--rounded
-  .v-list-item:not(:last-child):not(:only-child)
-    margin-bottom: $list-nav-rounded-item-margin-bottom
-
-  &.v-list--dense .v-list-item,
-  .v-list-item--dense
-    &:not(:last-child):not(:only-child)
-      margin-bottom: $list-nav-rounded-dense-item-margin-bottom
-
-.v-list--nav
-  padding-left: $list-nav-padding-left
-  padding-right: $list-nav-padding-right
-
-  .v-list-item
-    padding: $list-nav-item-padding
-
-  .v-list-item,
-  .v-list-item:before
-    border-radius: $list-nav-border-radius
-
-.v-list.v-sheet--shaped
-  +list-shaped($list-item-min-height)
-
-  &.v-list--two-line
-    +list-shaped($list-item-two-line-min-height)
-
-  &.v-list--three-line
-    +list-shaped($list-item-three-line-min-height)
-
-  +ltr()
-    padding-right: $list-shaped-padding
-
-  +rtl()
-    padding-left: $list-shaped-padding
-
-.v-list--rounded
-  padding: 8px
-  +list-rounded($list-item-min-height)
-
-  &.v-list--two-line
-    +list-rounded($list-item-two-line-min-height)
-
-  &.v-list--three-line
-    +list-rounded($list-item-three-line-min-height)
-
-.v-list--subheader
-  padding-top: $list-subheader-padding-top
+.v-list
+  .v-navigation-drawer &
+    background: transparent
+    color: inherit
