--- a/packages/vuetify/src/components/VList/_variables.scss
+++ b/packages/vuetify/src/components/VList/_variables.scss
@@ -1,67 +1,126 @@
-@import '../../styles/styles.sass';
-
-$avatar-margin-x: 16px !default;
+// Defaults
+$list-background: rgba(var(--v-theme-surface)) !default;
+$list-border-color: $border-color-root !default;
 $list-border-radius: 0 !default;
+$list-border-style: $border-style-root !default;
+$list-border-thin-width: thin !default;
+$list-border-width: 0 !default;
+$list-color: rgba(var(--v-theme-on-surface)) !default;
+$list-disabled-opacity: 0.6 !default;
 $list-elevation: 0 !default;
-$list-dense-subheader-font-size: 0.75rem !default;
-$list-dense-subheader-height: 40px !default;
-// TODO: Resolve naming conflicts for
-// shaped style propagation to items
-$list-shaped-border-radius: 0 !default;
+$list-padding: 8px 0 !default;
+$list-positions: absolute fixed !default;
 
-$list-item-avatar-margin-y: 8px !default;
-$list-item-avatar-horizontal-margin-x: -16px !default;
+$list-nav-subheader-font-size: .75rem !default;
 
-$list-item-icon-margin-y: 16px !default;
+$list-subheader-font-size: .875rem !default;
+$list-subheader-font-weight: 500 !default;
+$list-subheader-inset-margin: 56px !default;
+$list-subheader-inset-padding-start: 72px !default;
+$list-subheader-line-height: 1.375rem !default;
+$list-subheader-min-height: 48px !default;
+$list-subheader-padding-end: 16px !default;
+$list-subheader-padding-start: 16px !default;
+$list-subheader-padding-top: 0 !default;
+$list-subheader-min-height-multiplier: 1 !default;
+$list-subheader-text-opacity: var(--v-medium-emphasis-opacity) !default;
+$list-subheader-transition: 0.2s min-height $standard-easing !default;
 
 $list-item-min-height: 48px !default;
+$list-item-padding: 8px 16px !default;
+$list-item-transition: .2s $standard-easing !default;
 $list-item-two-line-min-height: 64px !default;
+$list-item-two-line-padding: 12px 16px !default;
 $list-item-three-line-min-height: 88px !default;
+$list-item-three-line-padding: 16px 16px !default;
 
-$list-item-title-font-size: map-deep-get($typography, 'subtitle-1', 'size') !default;
-$list-item-subtitle-font-size: map-deep-get($typography, 'subtitle-2', 'size') !default;
+$list-item-avatar-align-self: flex-start !default;
+$list-item-avatar-margin-end: 16px !default;
+$list-item-avatar-margin-start: 16px !default;
+$list-item-avatar-size: 40px !default;
+$list-item-avatar-size-multiplier: 1.5 !default;
+$list-item-avatar-margin-y: 4px !default;
 
-$list-item-dense-title-font-size: 0.8125rem !default;
-$list-item-dense-title-font-weight: 500 !default;
-$list-padding: 8px 0 !default;
-$list-dense-subheading-padding: 0 8px !default;
-$list-nav-border-radius: $border-radius-root !default;
-$list-nav-rounded-item-margin-bottom: 8px !default;
-$list-nav-rounded-item-dense-margin-bottom: 4px !default;
-$list-nav-padding-left: 8px !default;
-$list-nav-padding-right: 8px !default;
-$list-nav-item-padding: 0 8px !default;
-$list-shaped-padding: 8px !default;
-$list-subheader-padding-top: 0 !default;
-$list-group-header-icon-min-width: 48px !default;
-$list-group-sub-group-child-margin: 16px !default;
-$list-group-sub-group-header-margin: 32px !default;
-$list-group-items-item-padding: 40px !default;
-$list-group-no-action-item-padding: 72px !default;
-$list-dense-subheader-padding: 0 8px !default;
-$list-nav-rounded-dense-item-margin-bottom: 4px !default;
-$list-group-no-action-sub-group-item-padding: 88px !default;
-$list-group-dense-sub-group-header-padding: 24px !default;
-$list-group-nav-no-action-item-padding: 64px !default;
-$list-group-sub-group-item-padding: 80px !default;
-$list-item-padding: 0 16px !default;
-$list-item-action-margin: 12px 0 !default;
-$list-item-action-text-font-size: map-deep-get($typography, 'caption', 'size') !default;
-$list-item-avatar-horizontal-margin: 8px !default;
-$list-item-content-padding: 12px 0 !default;
-$list-item-content-children-margin-bottom: 2px !default;
-$list-item-icon-margin: 16px 0 !default;
-$list-item-child-last-type-margin: 16px !default;
-$list-item-child-min-width: 24px !default;
-$list-item-title-subtitle-line-height: 1.2 !default;
-$list-item-avatar-first-child-margin: 16px !default;
-$list-item-action-icon-margin: 32px !default;
-$list-dense-icon-height: 24px !default;
-$list-dense-icon-margin: 8px !default;
-$list-dense-min-height: 40px !default;
-$list-item-dense-title-line-height: 1rem !default;
-$list-item-dense-two-line-min-height: 60px !default;
-$list-item-dense-three-line-min-height: 76px !default;
-$list-dense-content-padding: 8px 0 !default;
-$list-item-two-line-icon-margin-bottom: 32px !default;
-$list-item-three-line-avatar-action-margin: 16px !default;
+$list-item-media-margin-bottom: 0 !default;
+$list-item-media-margin-end: 16px !default;
+$list-item-media-margin-start: 16px !default;
+$list-item-media-margin-top: 0 !default;
+$list-item-media-two-line-margin-bottom: -4px !default;
+$list-item-media-two-line-margin-top: -4px !default;
+$list-item-media-three-line-margin-bottom: 0 !default;
+$list-item-media-three-line-margin-top: 0 !default;
+
+$list-item-nav-title-font-size: .8125rem !default;
+$list-item-nav-title-font-weight: 500 !default;
+$list-item-nav-title-letter-spacing: normal !default;
+$list-item-nav-title-line-height: 1rem !default;
+$list-item-nav-subtitle-font-size: .75rem !default;
+$list-item-nav-subtitle-font-weight: map-deep-get($typography, 'body-2', 'weight') !default;
+$list-item-nav-subtitle-letter-spacing: map-deep-get($typography, 'body-2', 'letter-spacing') !default;
+$list-item-nav-subtitle-line-height: 1rem !default;
+
+$list-item-subtitle-opacity: var(--v-medium-emphasis-opacity) !default;
+$list-item-subtitle-font-size: map-deep-get($typography, 'body-2', 'size') !default;
+$list-item-subtitle-font-weight: map-deep-get($typography, 'body-2', 'weight') !default;
+$list-item-subtitle-letter-spacing: map-deep-get($typography, 'body-2', 'letter-spacing') !default;
+$list-item-subtitle-line-height: 1rem !default;
+$list-item-subtitle-padding: 0 !default;
+$list-item-subtitle-text-transform: none !default;
+
+$list-item-title-font-size: map-deep-get($typography, 'body-1', 'size') !default;
+$list-item-title-font-weight: map-deep-get($typography, 'body-1', 'weight') !default;
+$list-item-title-header-padding: 0 !default;
+$list-item-title-hyphens: auto !default;
+$list-item-title-letter-spacing: map-deep-get($typography, 'subtitle-1', 'letter-spacing') !default;
+$list-item-title-line-height: map-deep-get($typography, 'body-1', 'line-height') !default;
+$list-item-title-overflow-wrap: normal !default;
+$list-item-title-padding: 0 !default;
+$list-item-title-text-overflow: ellipsis;
+$list-item-title-text-transform: none !default;
+$list-item-title-word-break: normal !default;
+$list-item-title-word-wrap: break-word !default;
+
+$list-density: ('default': 0, 'comfortable': -1, 'compact': -2) !default;
+
+$list-border: (
+  $list-border-color,
+  $list-border-style,
+  $list-border-width
+);
+
+$list-theme: (
+  $list-background,
+  $list-color
+);
+
+$list-item-title-typography: (
+  $list-item-title-font-size,
+  $list-item-title-font-weight,
+  $list-item-title-letter-spacing,
+  $list-item-title-line-height,
+  $list-item-title-text-transform
+);
+
+$list-item-subtitle-typography: (
+  $list-item-subtitle-font-size,
+  $list-item-subtitle-font-weight,
+  $list-item-subtitle-letter-spacing,
+  $list-item-subtitle-line-height,
+  $list-item-subtitle-text-transform
+);
+
+$list-item-nav-title-typography: (
+  $list-item-nav-title-font-size,
+  $list-item-nav-title-font-weight,
+  $list-item-nav-title-letter-spacing,
+  $list-item-nav-title-line-height,
+  null
+);
+
+$list-item-nav-subtitle-typography: (
+  $list-item-nav-subtitle-font-size,
+  $list-item-nav-subtitle-font-weight,
+  $list-item-nav-subtitle-letter-spacing,
+  $list-item-nav-subtitle-line-height,
+  null
+);
