--- a/packages/vuetify/src/styles/tools/_index.sass
+++ b/packages/vuetify/src/styles/tools/_index.sass
@@ -10,6 +10,7 @@
 @import './_sheet'
 @import './_states'
 @import './_theme'
+@import './_typography'
 @import './_utilities'
 @import './_display'
 
