fix(VCard): use a child combinator for v-card-subtitle color style
see #13745

--- a/packages/vuetify/src/components/VCard/VCard.sass
+++ b/packages/vuetify/src/components/VCard/VCard.sass
@@ -6,7 +6,7 @@
   color: map-deep-get($material, 'text', 'primary')
 
   > .v-card__text,
-  .v-card__subtitle
+  > .v-card__subtitle
     color: map-deep-get($material, 'text', 'secondary')
 
 // Sheet
