feat: add router integration (#13756)
Resolves #1793

--- a/packages/vuetify/src/components/VCard/VCard.sass
+++ b/packages/vuetify/src/components/VCard/VCard.sass
@@ -6,6 +6,7 @@
   color: $card-color
   position: relative
   padding: $card-padding
+  text-decoration: none
 
   @include border($card-border...)
   @include elevation($card-elevation)
