--- a/packages/vuetify/src/components/VList/VListItem.sass
+++ b/packages/vuetify/src/components/VList/VListItem.sass
@@ -6,6 +6,7 @@
   padding: $list-item-padding
   position: relative
   outline: none
+  text-decoration: none
   transition: $list-item-transition
 
   @include states('.v-list-item__overlay')
