--- a/packages/vuetify/src/components/VBanner/_variables.scss
+++ b/packages/vuetify/src/components/VBanner/_variables.scss
@@ -43,5 +43,6 @@ $banner-mobile-thumbnail-padding-start: 16px !default;
 $banner-border: (
   $banner-border-color,
   $banner-border-style,
-  $banner-border-width
+  $banner-border-width,
+  $banner-border-thin-width
 ) !default;
