--- a/packages/vuetify/src/components/VDivider/VDivider.sass
+++ b/packages/vuetify/src/components/VDivider/VDivider.sass
@@ -8,7 +8,7 @@
   max-height: 0px
   transition: inherit
 
-  @include border($divider-border-color, $divider-border-style, $divider-border-width)
+  @include border($divider-border...)
 
   &--vertical
     align-self: stretch
