--- a/packages/vuetify/src/components/VList/VListItem.sass
+++ b/packages/vuetify/src/components/VList/VListItem.sass
@@ -9,7 +9,9 @@
   text-decoration: none
   transition: $list-item-transition
 
+  @include border($list-item-border...)
   @include states('.v-list-item__overlay')
+  @include variant($list-item-variants...)
 
   &--disabled
     pointer-events: none
