--- a/packages/vuetify/src/components/VAppBar/VAppBar.sass
+++ b/packages/vuetify/src/components/VAppBar/VAppBar.sass
@@ -14,20 +14,17 @@
   transition: $app-bar-transition
   transition-property: height, transform
 
+  // must be above border mixin for cascade
+  &--is-active
+    @include elevation($app-bar-elevation)
+
   @include border($app-bar-border...)
   @include rounded($app-bar-border-radius)
 
   &--absolute
     position: absolute
 
-  &--is-active
-    @include elevation($app-bar-elevation)
-
   &--border
-    border-bottom-width: $app-bar-border-thin-width
-
-    @include elevation($app-bar-flat-elevation)
-
     &.v-app-bar--bottom
       border-bottom-width: $app-bar-border-width
       border-top-width: $app-bar-border-thin-width
