--- a/packages/vuetify/src/components/VCard/VCard.sass
+++ b/packages/vuetify/src/components/VCard/VCard.sass
@@ -2,25 +2,19 @@
 @import './index'
 
 .v-card
-  background: $card-background
   color: $card-color
   position: relative
   padding: $card-padding
   text-decoration: none
+  transition-duration: $card-transition-duration
+  transition-property: $card-transition-property
+  transition-timing-function: $card-transition-timing-function
 
   @include border($card-border...)
-  @include elevation($card-elevation)
   @include position($card-positions)
   @include rounded($card-border-radius)
   @include states('.v-card__overlay')
-
-  &--border
-    border-width: $card-border-thin-width
-
-    @include elevation(0)
-
-    &::before
-      @include elevation($card-border-before-elevation)
+  @include variant($card-variants...)
 
   &--disabled
     pointer-events: none
@@ -28,6 +22,9 @@
 
     > [class*='v-card-']
       opacity: $card-disabled-opacity
+
+  &--flat
+    box-shadow: none
 
   &--hover
     cursor: pointer
@@ -43,8 +40,7 @@
       position: absolute
       right: 0
       top: 0
-      transition-property: $card-pseudo-transition-property
-      transition: $card-pseudo-transition
+      transition: inherit
 
     &::before
       opacity: 1
@@ -133,11 +129,11 @@
 
 .v-card-subtitle
   align-items: center
-  color: $card-subtitle-color
   display: flex
   font-size: $card-subtitle-font-size
   font-weight: $card-subtitle-font-weight
   letter-spacing: $card-subtitle-letter-spacing
+  opacity: $card-subtitle-opacity
   padding: $card-subtitle-padding
   text-transform: $card-subtitle-text-transform
 
@@ -147,12 +143,14 @@
     padding: $card-subtitle-header-padding
 
 .v-card-text
-  color: $card-text-color
   font-size: $card-text-font-size
   font-weight: $card-text-font-weight
   letter-spacing: $card-text-letter-spacing
+  opacity: $card-text-opacity
   padding: $card-text-padding
   text-transform: $card-text-text-transform
+  transition: inherit
+  transition-property: color, opacity
 
   @include card-line-height-densities($card-text-densities)
 
@@ -189,3 +187,6 @@
   + .v-card-media
     border-top-left-radius: inherit
     border-top-right-radius: inherit
+
+  .v-card--variant-text:not(.v-card--link):hover &
+    opacity: $card-text-variant-opacity
