--- a/packages/vuetify/src/components/VList/_variables.scss
+++ b/packages/vuetify/src/components/VList/_variables.scss
@@ -33,10 +33,8 @@ $list-item-border-width: 0 !default;
 $list-item-border-thin-width: thin !default;
 $list-item-elevation: 0 !default;
 $list-item-min-height: 48px !default;
-$list-item-outlined-opacity: var(--v-border-opacity) !default;
 $list-item-padding: 8px 16px !default;
 $list-item-plain-opacity: .62 !default;
-$list-item-text-opacity: 0 !default;
 $list-item-transition: .2s $standard-easing !default;
 $list-item-two-line-min-height: 64px !default;
 $list-item-two-line-padding: 12px 16px !default;
@@ -144,9 +142,8 @@ $list-item-nav-subtitle-typography: (
 
 $list-item-variants: (
   $list-background,
+  $list-color,
   $list-item-elevation,
   $list-item-plain-opacity,
-  $list-item-outlined-opacity,
-  $list-item-text-opacity,
   'v-list-item'
 );
